# libstrophe

./: Makefile.am  configure.ac  strophe.h
examples/: vcard.c
src/: common.h  conn.c  event.c  resolver.c  sock.c  sock.h  tls_libnx.c
